# TransNetV2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start_worker.sh  start_workers.bat  test.py
app/: __init__.py  config.py  media_utils.py  predictor.py  s3_client.py  worker.py
inference_pytorch/: __init__.py  transnetv2_pytorch.py
scripts/: plot_result.py
tests/: test_config.py  test_media_utils.py  test_predictor.py  test_s3_client.py  test_worker.py
